--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,47 @@
 /ReplaceGreatestLeft.class
 /TwoPowerLessThanNumber.class
 /MaxProdPair.class
+/AmaCustReview.class
+/AmaFreshPromo.class
+/BFSShortestGrid$Point.class
+/BFSShortestGrid.class
+/BiggestNumberArray$1.class
+/BiggestNumberArray.class
+/BinaryLifting.class
+/BooleanMatrixLargestArea.class
+/BoundaryTraversalTree.class
+/Combinations.class
+/FloodFill$Pair.class
+/FloodFill.class
+/GCDString.class
+/GetMissingNo.class
+/KthParentEvenSum.class
+/LongestConsecutiveOne.class
+/LongestIncreasingMatrixPath$Pair.class
+/LongestIncreasingMatrixPath.class
+/MatrixChainMultiplicationDP.class
+/MedianSortedArrays.class
+/MinDEpth.class
+/MostCommonWord.class
+/MostFrequentSubtreeSum.class
+/NextGreaterFrequency.class
+/NonRepeatininStream.class
+/PermutationofS1inS2.class
+/PrintNodesAtK.class
+/PrisonCellAfterNdays.class
+/RainWaterTrap.class
+/RotateArray.class
+/RottingOrange$Point.class
+/RottingOrange.class
+/SearchInsert.class
+/SpecialTree.class
+/SpiralMatrix.class
+/SubstringSE1.class
+/UpdateMatrix$Pair.class
+/UpdateMatrix.class
+/SearchRotatedArray.class
+/AnagramsInStringPosition.class
+/SPinBM.class
+/SPinBM$Pair.class
+/AllPathsSourceTarget.class
+/CombinationSums.class
