some more dp code leetcode

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,12 @@
 /SPinBM$Pair.class
 /AllPathsSourceTarget.class
 /CombinationSums.class
+/TestClass.class
+/CombinationSum2.class
+/JumpGame.class
+/JumpGame2.class
+/NumDecodings.class
+/WordBreak.class
+/NumberOfLIS.class
+/BitwiseANDRange.class
+/CoinChangeMinNoCoins.class
