more codes from leetcode

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,7 @@
 /NumberOfLIS.class
 /BitwiseANDRange.class
 /CoinChangeMinNoCoins.class
+/KDiffPairsArray.class
+/SubarraySumEqualsK.class
+/ComputeDeviceCrossover.class
+/WordLadder.class
