--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,10 @@
 /SubarraySumEqualsK.class
 /ComputeDeviceCrossover.class
 /WordLadder.class
+/ImplementstrStr.class
+/IsASubsequence.class
+/MinimumTimeTrips.class
+/LongestCommonPrefix.class
+/LongestCommonPrefix$Node.class
+/TreeOfSpace.class
+/TreeOfSpace$Node.class
