--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@
 /LongestCommonPrefix$Node.class
 /TreeOfSpace.class
 /TreeOfSpace$Node.class
+/TestClass$Node.class
+/WordBreakDP.class
+/TestingSomething.class
