more code added from leetcode

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,30 @@
 /LongestCommonPrefix$Node.class
 /TreeOfSpace.class
 /TreeOfSpace$Node.class
+/WordBreakDP.class
+/TrainsPlatforms.class
+/TrainsPlatforms$Train.class
+/MinRefuelStops.class
+/MinRefuelStops$Pair.class
+/SimplifyPath.class
+/RegularExpressionMatching.class
+/RegularExpressionMatchingMemoization.class
+/NextGreaterPermutation.class
+/KWeakestRows.class
+/KWeakestRows$1.class
+/KWeakestRows$Pair.class
+/MergeIntervals.class
+/test.class
+/MinCostConnectPoints.class
+/MinCostConnectPoints$PairDist.class
+/Problem.class
+/Problem2.class
+/Problem3.class
+/Problem2$Pair.class
+/Pattern132.class
+/CombinationSum3.class
+/NetworkDelayTime.class
+/NetworkDelayTime$Pair.class
+/DeepestLeavesSum.class
+/DeepestLeavesSum$TreeNode.class
+/FindJudge.class
