--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,21 @@
 /DeepestLeavesSum.class
 /DeepestLeavesSum$TreeNode.class
 /FindJudge.class
+/TestClass$Node.class
+/TestingSomething.class
+/PalindromicSubstrings.class
+/Solution.class
+/MaximumWordLength.class
+/HasAllCodes.class
+/CloneRandomPointer.class
+/CloneRandomPointer$ListNode.class
+/LLPalindrom.class
+/LLPalindrom$ListNode.class
+/RemoveLoop.class
+/RemoveLoop$ListNode.class
+/MatrixBlockSum.class
+/NGEinLL.class
+/NGEinLL$ListNode.class
+/NGEinLL$Pair.class
+/JosephusProblem.class
+/RestoreIP.class
