--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,17 @@
 /NGEinLL$Pair.class
 /JosephusProblem.class
 /RestoreIP.class
+/Testing.class
+/ReduceXToZero.class
+/MaximumUniqueSubarray.class
+/LongestStringChain.class
+/LongestStringChain$1.class
+/MinCameraCover.class
+/MinCameraCover$TreeNode.class
+/SuggestProducts.class
+/TargetArrayConstr.class
+/MinPartition.class
+/ReconstructQueue.class
+/MaxTruckUnits.class
+/MaxCakeArea.class
+/WiggleSeq.class
